[project]
name = "deltaworld-unofficial"
version = "0.1.0"
description = "Unofficial PyTorch implementation for A Frame Is Worth One Token: Efficient Generative World Modeling with Delta Tokens."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.2", "pyyaml>=6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
